fixed sticky notes when text is too long
made adding sticky notes more easier

also changed Main Page to My Page to make it simpler

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,3 +52,20 @@ body{
     background-color: #2196F3;
     color: #fff;
   }
+
+  
+
+table tr:nth-child(odd) td{
+    background-color: #a8baa9;
+    max-width: 200px;
+    height:50px;
+    word-wrap: break-word;
+    
+}
+table tr:nth-child(even) td{
+    background-color:  #dbcdad;
+    max-width: 200px;
+    height:50px;
+    word-wrap: break-word;
+    
+}
